# pmca

./: .gitignore  CLAUDE.md  CODE_QUALITY.md  README.md  pmca_benchmark_7b.json  pyproject.toml  qwen3.5-coder-think.Modelfile  qwen3.5-coder.Modelfile  raw_benchmark_14b.json  raw_benchmark_7b.json
benchmark/: README.md  pmca_bench.json  pmca_bench_hard.json  results_opencode.json  run.py
benchmark/samples/: pyrqg_stats_qwen36_27b.py
benchmarks/: bench6_multifile.py
config/: classeval_fast.yaml  default.yaml  gemma4_32k.yaml  gemma4_e2b.yaml  gemma4_opencode.yaml  gemma4_project.yaml  gemma4_quality.yaml  hybrid_gemma_qwen.yaml  optimal_qwen35.yaml  production_run.yaml  project_7b.yaml  project_deepseek.yaml  project_llama.yaml  project_mixed.yaml  qwen35_27b.yaml  qwen35_coder_skills.yaml  qwen36_27b.yaml  qwen36_8k.yaml  qwen36_maxgpu.yaml  qwen36_moe.yaml  qwen36_overnight.yaml  test_14b.yaml  test_7b.yaml  test_codegemma.yaml  test_deepseek.yaml  test_llama.yaml  test_mixed.yaml  test_qwen35.yaml  test_qwen35_nothink.yaml
docs/: deep-decomposition-research.md  production-benchmarks.md
pmca/: __init__.py  cli.py  orchestrator.py
pmca/agents/: architect.py  base.py  coder.py  reviewer.py  tester.py  watcher.py
pmca/api/: __init__.py  events.py  models.py  server.py
pmca/eval/: runner.py
pmca/knowledge_base/: patterns.md
pmca/knowledge_base/skeletons/: observer.py
pmca/mcp/: server.py
pmca/models/: config.py  manager.py  profiles.py  setup.py
pmca/prompts/: __init__.py  architect.py  architect_skills.py  coder.py  fix_skills.py  go_skills.py  language_skills.py  python_modern_skills.py  qwen_python_skills.py  reviewer.py  sop_mandates.py  tester.py  typescript_skills.py  watcher.py
pmca/prompts/archive/: fix_skills_v1.py
pmca/rules/: broad_exception.yaml  print_in_library.yaml
pmca/tasks/: state.py  tree.py
pmca/tuning/: cli.py  parameters.py  tuner.py
pmca/utils/: assembler.py  context.py  failure_memory.py  lang.py  linters.py  logger.py  mutator.py  rag.py
scripts/: benchmark.py  benchmark_raw.py  benchmark_tier1.py  profile_model.py  quality_report.py
tests/: test_agents.py  test_api.py  test_assembler.py  test_model_manager.py  test_orchestrator.py  test_project_mode.py  test_task_tree.py  test_tuning.py  test_v2_features.py
