[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pmca"
version = "0.1.0"
description = "Portable Modular Coding Agent — a fully local, hierarchical coding agent"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "gitpython>=3.1",
    "rich>=13.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]
rag = [
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
]
mcp = [
    "mcp>=1.0",
]
lint = [
    "mypy>=1.0",
    "ruff>=0.4",
    "semgrep>=1.0",
]
all = [
    "pmca[rag,mcp,lint]",
]

[project.scripts]
pmca = "pmca.cli:main"

[tool.setuptools.packages.find]
include = ["pmca*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [".venv", "build", "dist", "workspace", "results"]

[tool.ruff.lint]
select = [
    "F",    # pyflakes
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "I",    # isort
    "B",    # bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by line-length)
    "B008",   # function calls in argument defaults
    "UP042",  # StrEnum (keep str/Enum for Python 3.11 compat)
    "UP035",  # typing.Callable usage (kept for readability in some spots)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F811"]  # test fixtures may appear unused

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
exclude = ["build/", "dist/", "\\.venv/", "workspace/"]
